# CertoraProver

./: .editorconfig  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: CODEOWNERS
Public/TestEVM/: README.md
detekt/: detekt.yml
lib/SMTLIBUtils/: .gitignore
scripts/: CallTraceRefresher.py  certora-select  certoraEVMProver.py  certoraEqCheck.py  certoraMutate.py  certoraRun.py  certoraSolanaProver.py  certoraSorobanProver.py  certora_cli_publish.py  certora_cli_requirements.txt  generateMutant.py  localRegtest.py  rustMutator.py
scripts/CertoraProver/: __init__.py  certoraBuild.py  certoraBuildCacheManager.py  certoraBuildDataClasses.py  certoraBuildRust.py  certoraCloudIO.py  certoraCollectRunMetadata.py  certoraCompilerParameters.py  certoraConfigIO.py  certoraContext.py  certoraContextAttributes.py  certoraContextClass.py  certoraContextValidator.py  certoraContractFuncs.py  certoraExtensionInfo.py  certoraJobList.py  certoraMiniSpecParser.py  certoraNodeFilters.py  certoraParseBuildScript.py  certoraProjectScanner.py  certoraSourceFinders.py  certoraType.py  certoraVerifyGenerator.py  splitRules.py
scripts/EquivalenceCheck/: Eq_default.conf  Eq_mc_no_out_template.spec  Eq_mc_template.spec  Eq_sanity.conf  Eq_template.spec  README.md  equivCheck.py  sanity.spec
scripts/Gimli-DWARF-JSONDump/: Cargo.toml  README.md
scripts/Gimli-DWARF-JSONDump/src/: main.rs
scripts/Mutate/: mutateApp.py  mutateAttributes.py  mutateConstants.py  mutateUtil.py  mutateValidate.py
scripts/Shared/: ExpectedComparator.py  __init__.py  (+4 more)
(+4493 files in other folders)
